--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 class="author__img"
               />
               <div class="author__info">
-                <p class="author__name">Colton Smith</p>
+                <h2 class="author__name">Colton Smith</h2>
                 <p class="author__state">Verified Buyer</p>
               </div>
             </div>
@@ -163,7 +163,7 @@
                 class="author__img"
               />
               <div class="author__info">
-                <p class="author__name">Anne Wallace</p>
+                <h2 class="author__name">Anne Wallace</h2>
                 <p class="author__state">Verified Buyer</p>
               </div>
             </div>
@@ -182,7 +182,7 @@
                 class="author__img"
               />
               <div class="author__info">
-                <p class="author__name">Irene Roberts</p>
+                <h2 class="author__name">Irene Roberts</h2>
                 <p class="author__state">Verified Buyer</p>
               </div>
             </div>
